fix size of sidebar on mobile and hide status

--- a/src/css/dash/_aside.scss
+++ b/src/css/dash/_aside.scss
@@ -20,7 +20,6 @@ body.siftal.rtl[data-sidebar] #sidebar{right:0}
 .siftal[data-clean] #sidebar {display:block;position:fixed;top:0;bottom:0;overflow-y:auto;z-index:3;left:-250px;}
 .siftal[data-clean].rtl #sidebar{right:-250px;left:initial;}
 .siftal[data-clean] #sidebar figure{margin:2em 0;}
-.siftal[data-clean] #sidebar ul > li > a {padding:1.2em 2em;}
 .siftal[data-clean] #sidebar h2{display:none;}
 .siftal[data-clean] header #sidenavHandler{-webkit-box-flex: 0;-webkit-flex: 0 0 auto;-ms-flex: 0 0 auto;-moz-box-flex: 0;flex: 0 0 auto;max-width: initial;display: flex !important;}
 
