--- a/src/css/responsive/_tablet.scss
+++ b/src/css/responsive/_tablet.scss
@@ -53,7 +53,6 @@
   .siftal #sidebar {display:block;position:fixed;top:0;bottom:0;overflow-y:auto;z-index:3;left:-250px;}
   .siftal.rtl #sidebar{right:-250px;left:initial;}
   .siftal #sidebar figure{margin:2em 0;}
-  .siftal #sidebar ul > li > a {padding:1.2em 2em;}
   .siftal #sidebar h2{display:none;}
 
 
